tests/negative/Internal/Positivity/E10.juvix
module E10;

type T0 (A : Type) := t : (A -> T0 A) -> T0 A;

T0alias : Type -> Type := T0;

type T1 := c : T0alias T1 -> T1;
